@@ -85,7 +85,7 @@ class PostgreSQLParser {
 					// we ignore a lot of common log lines as they are not interesting
 					// but we still raise an error if we don't recognize a log line
 					// as it may provide useful information about an unusual activity
-					if(
+					if(!CONFIG_QUIET && (
 						strpos($postMatch, 'transaction ID wrap limit is') !== 0 &&
 						strpos($postMatch, 'archived transaction log file') !== 0 &&
 						strpos($postMatch, 'disconnection: session time: ') !== 0 &&
@@ -97,7 +97,7 @@ class PostgreSQLParser {
 						strpos($postMatch, 'checkpoints are occurring too frequently (') !== 0 &&
 						strpos($postMatch, 'invalid length of startup packet') !== 0 &&
 						strpos($postMatch, 'incomplete startup packet') !== 0
-						) {
+						)) {
 						stderr('Unrecognized LOG or DEBUG line: '.$text, true);
 					}
 					$line = false;
